--- a/ClientCalcDroid/ClientCalcDroid.Android/Resources/layout/Main.axml
+++ b/ClientCalcDroid/ClientCalcDroid.Android/Resources/layout/Main.axml
@@ -1,14 +1,191 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    >
-<Button  
-    android:id="@+id/myButton"
-    android:layout_width="match_parent" 
-    android:layout_height="wrap_content" 
-    android:text="@string/hello"
-    />
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@android:color/background_light"
+    android:id="@+id/linearLayout1">
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="99.0dp"
+        android:id="@+id/textView1"
+        android:shadowColor="#00000000"
+        android:background="@android:color/holo_purple"
+        android:textSize="30dp"
+        android:textColor="@android:color/background_dark" />
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="86.5dp"
+        android:id="@+id/gridLayout1">
+        <Button
+            android:text="7"
+            android:id="@+id/button7"
+            android:textColor="@android:color/background_dark"
+            android:background="@android:color/background_light"
+            android:textSize="30dp"
+            android:clickable="true"
+            android:layout_height="match_parent" />
+        <Button
+            android:text="8"
+            android:id="@+id/button8"
+            android:textColor="@android:color/background_dark"
+            android:background="@android:color/background_light"
+            android:textSize="30dp"
+            android:clickable="true"
+            android:layout_height="match_parent" />
+        <Button
+            android:text="9"
+            android:id="@+id/button9"
+            android:textColor="@android:color/background_dark"
+            android:background="@android:color/background_light"
+            android:textSize="30dp"
+            android:clickable="true"
+            android:layout_height="match_parent" />
+        <Button
+            android:text="+"
+            android:id="@+id/add"
+            android:textColor="@android:color/background_dark"
+            android:background="@android:color/darker_gray"
+            android:textSize="30dp"
+            android:clickable="true"
+            android:layout_height="match_parent" />
+    </GridLayout>
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="86.5dp"
+        android:id="@+id/gridLayout1"
+        android:minWidth="25px"
+        android:minHeight="25px">
+        <Button
+            android:text="4"
+            android:id="@+id/button4"
+            android:textColor="@android:color/background_dark"
+            android:background="@android:color/background_light"
+            android:textSize="30dp"
+            android:clickable="true"
+            android:layout_height="match_parent" />
+        <Button
+            android:text="5"
+            android:id="@+id/button5"
+            android:textColor="@android:color/background_dark"
+            android:background="@android:color/background_light"
+            android:textSize="30dp"
+            android:clickable="true"
+            android:layout_height="match_parent" />
+        <Button
+            android:text="6"
+            android:id="@+id/button6"
+            android:textColor="@android:color/background_dark"
+            android:background="@android:color/background_light"
+            android:textSize="30dp"
+            android:clickable="true"
+            android:layout_height="match_parent" />
+        <Button
+            android:text="-"
+            android:id="@+id/riz"
+            android:textColor="@android:color/background_dark"
+            android:background="@android:color/darker_gray"
+            android:textSize="30dp"
+            android:clickable="true"
+            android:layout_height="match_parent" />
+    </GridLayout>
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="86.5dp"
+        android:id="@+id/gridLayout1"
+        android:minWidth="25px"
+        android:minHeight="25px">
+        <Button
+            android:text="1"
+            android:id="@+id/button1"
+            android:textColor="@android:color/background_dark"
+            android:background="@android:color/background_light"
+            android:textSize="30dp"
+            android:clickable="true"
+            android:layout_height="match_parent" />
+        <Button
+            android:text="2"
+            android:id="@+id/button2"
+            android:textColor="@android:color/background_dark"
+            android:background="@android:color/background_light"
+            android:textSize="30dp"
+            android:clickable="true"
+            android:layout_height="match_parent" />
+        <Button
+            android:text="3"
+            android:id="@+id/button3"
+            android:textColor="@android:color/background_dark"
+            android:background="@android:color/background_light"
+            android:textSize="30dp"
+            android:clickable="true"
+            android:layout_height="match_parent" />
+        <Button
+            android:text="*"
+            android:id="@+id/mult"
+            android:textColor="@android:color/background_dark"
+            android:background="@android:color/darker_gray"
+            android:textSize="30dp"
+            android:clickable="true"
+            android:layout_height="match_parent" />
+    </GridLayout>
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="86.5dp"
+        android:id="@+id/gridLayout1">
+        <Button
+            android:text=","
+            android:id="@+id/buttondot"
+            android:textColor="@android:color/background_dark"
+            android:background="@android:color/background_light"
+            android:textSize="30dp"
+            android:clickable="true"
+            android:layout_height="match_parent" />
+        <Button
+            android:text="0"
+            android:id="@+id/button0"
+            android:textColor="@android:color/background_dark"
+            android:background="@android:color/background_light"
+            android:textSize="30dp"
+            android:clickable="true"
+            android:layout_height="match_parent" />
+        <Button
+            android:text="C"
+            android:id="@+id/buttonC"
+            android:textColor="@android:color/background_dark"
+            android:background="@android:color/background_light"
+            android:textSize="30dp"
+            android:clickable="true"
+            android:layout_height="match_parent" />
+        <Button
+            android:text="/"
+            android:id="@+id/div"
+            android:textColor="@android:color/background_dark"
+            android:background="@android:color/darker_gray"
+            android:textSize="30dp"
+            android:clickable="true"
+            android:layout_height="match_parent" />
+    </GridLayout>
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="86.5dp"
+        android:id="@+id/gridLayout1">
+        <Button
+            android:text="&lt;---"
+            android:id="@+id/cler"
+            android:textColor="@android:color/background_dark"
+            android:background="@android:color/background_light"
+            android:textSize="30dp"
+            android:clickable="true"
+            android:layout_height="match_parent"
+            android:layout_width="176dp" />
+        <Button
+            android:text="="
+            android:id="@+id/res"
+            android:textColor="@android:color/background_dark"
+            android:background="@android:color/holo_orange_dark"
+            android:textSize="30dp"
+            android:clickable="true"
+            android:layout_height="match_parent"
+            android:layout_width="176dp" />
+    </GridLayout>
 </LinearLayout>
-
